<resources>
    <string name="app_name">InstrumentMonitor</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">InstrumentMonitor</string>
    <string name="buttonOne">BK Precision Meter</string>
    <string name="buttonTwo">Serial Viewer</string>
    <string name="title_activity_bkprecision_meter">BKPrecisionMeter</string>
    <string name="textParam">Parameters</string>
    <string name="textParam1">Voltage</string>
    <string name="textParam2">Current</string>
    <string name="textParam3">Resistance</string>
    <string name="textParam4">Inductance</string>
    <string name="textParam5">Capacitance</string>
    <string name="textParam6">Active Param</string>
    <string name="textValue">Value</string>
    <string name="textViewSync">Sync</string>
    <string name="updateRate">Update Rate</string>
    <string name="editTextdefault">0.0</string>
    <string name="textViewUnit">mS</string>
    <string name="textValueDefault">0.0</string>
    <string name="settingsButton1">Apply (OK)</string>
    <string name="ipAddressSettings">Enter Server IP-Address</string>
    <string name="defaultIp">192.168.x.x</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_serial_viewer">SerialViewer</string>
    <string name="serialViewerDefaultText">Sync to use Serial Viewer</string>
</resources>
