<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#cedfdc"
    tools:context="com.instrumentmonitor.rohsins.instrumentmonitor.SerialViewer">

    <!-- TextView android:text="@string/SerialViewer" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"/ -->

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="80dp"
        android:background="#e9f0f4"/>

    <TextView android:id="@+id/serialViewerTextView01"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="84dp"
        android:textSize="14sp"
        android:typeface="serif"
        android:text="@string/serialViewerDefaultText"/>

    <TextView android:id="@+id/textViewSync"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewSync"
        android:textSize="22sp"
        android:typeface="serif"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="4dp"/>

    <Switch
        android:id="@+id/syncSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="4dp"
        android:clickable="true"/>

    <TextView android:id="@+id/textViewUpdateRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/updateRate"
        android:textSize="19sp"
        android:textStyle="italic"
        android:typeface="serif"
        android:layout_above="@id/textViewSync"
        android:layout_marginBottom="10dp"/>

    <EditText android:id="@+id/editTextUpdateRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editTextdefault"
        android:typeface="serif"
        android:inputType="numberDecimal"
        android:layout_above="@id/syncSwitch"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="4dp"
        android:layout_alignParentRight="true"/>

    <TextView android:id="@+id/textViewUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewUnit"
        android:textSize="18sp"
        android:typeface="serif"
        android:layout_marginBottom="15dp"
        android:layout_above="@id/syncSwitch"
        android:layout_alignParentRight="true"/>

</RelativeLayout>
